--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ a,
                                 </g>
                               </g>
                             </svg></div>
-                  </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/the_story_bnb"
+                  </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/thebnbstory"
                     target="_blank" class="btn-parent w-inline-block">
                     <div class="code-embed w-embed"><svg style="fill:white!important;" width="100%" id="Capa_1"
                         fill="currentcolor" enable-background="new 0 0 1226.37 1226.37" viewBox="0 0 1226.37 1226.37"
@@ -653,7 +653,7 @@ a,
                         <path
                           d="m423.851562 119.300781c0 16.953125-13.746093 30.699219-30.703124 30.699219-16.953126 0-30.699219-13.746094-30.699219-30.699219 0-16.957031 13.746093-30.699219 30.699219-30.699219 16.957031 0 30.703124 13.742188 30.703124 30.699219zm0 0" />
                         </svg></div>
-                  </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e99-ae0b7e8a" href="https://t.me/the_story_bnb"
+                  </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e99-ae0b7e8a" href="https://t.me/thebnbstory"
                     target="_blank" class="btn-parent w-inline-block">
                     <div class="code-embed w-embed"><svg style="fill:white!important;" width="100%" clip-rule="evenodd"
                         fill-rule="evenodd" image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
@@ -1461,7 +1461,7 @@ a,
                                   </g>
                                 </g>
                               </svg></div>
-                    </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/the_story_bnb"
+                    </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e93-ae0b7e8a" href="https://x.com/thebnbstory"
                       target="_blank" class="btn-parent w-inline-block">
                       <div class="code-embed w-embed"><svg style="fill:white!important;" width="100%" id="Capa_1"
                           fill="currentcolor" enable-background="new 0 0 1226.37 1226.37" viewBox="0 0 1226.37 1226.37"
@@ -1539,7 +1539,7 @@ a,
                             d="m423.851562 119.300781c0 16.953125-13.746093 30.699219-30.703124 30.699219-16.953126 0-30.699219-13.746094-30.699219-30.699219 0-16.957031 13.746093-30.699219 30.699219-30.699219 16.957031 0 30.703124 13.742188 30.703124 30.699219zm0 0" />
                           </svg></div>
                     </a><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e99-ae0b7e8a"
-                      href="https://t.me/the_story_bnb" target="_blank" class="btn-parent w-inline-block">
+                      href="https://t.me/thebnbstory" target="_blank" class="btn-parent w-inline-block">
                       <div class="code-embed w-embed"><svg style="fill:white!important;" width="100%"
                           clip-rule="evenodd" fill-rule="evenodd" image-rendering="optimizeQuality"
                           shape-rendering="geometricPrecision" text-rendering="geometricPrecision" viewBox="0 0 512 512"
