--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="utf-8" />
   <title>Introducing $币安故事</title>
   <meta
-    content="The Story of Binance"
+    content="The Binance Story"
     name="description" />
   <meta content="Introducing $币安故事" property="og:title" />
   <meta
-    content="The Story of Binance"
+    content="The Binance Story"
     property="og:description" />
   <meta content="/2.png"
     property="og:image" />
   <meta content="Introducing $币安故事" property="twitter:title" />
   <meta
-    content="The Story of Binance"
+    content="The Binance Story"
     property="twitter:description" />
   <meta content="/2.png"
     property="twitter:image" />
@@ -514,7 +514,7 @@ a,
                     <div class="button-hover-box-01"></div>
                   </a>
                 </div>
-                <h3 class="heading-style-h2 text-color-white" style="text-align: center; color: yellow; padding-top: 0px;">The Story of Binance <br> <span style="font-size: 30px !important;"></span></h3>
+                <h3 class="heading-style-h2 text-color-white" style="text-align: center; color: yellow; padding-top: 0px;">The Binance Story <br> <span style="font-size: 30px !important;"></span></h3>
                 <div class="button-group buy-now"><a id="w-node-_3a10a6d4-8e83-343e-9075-f760ae0b7e8b-ae0b7e8a"
                     href="https://dexscreener.com/bsc/0xcomingsoon" target="_blank"
                     class="btn-parent w-inline-block">
@@ -678,7 +678,7 @@ a,
               <div class="cta8_component">
                 <div id="w-node-_820082e3-4990-c2e3-4541-bf1a82c9f5ab-8869562e" class="cta8_content">
                   <div class="max-width-large">
-                    <!-- <h3 class="heading-style-h2 text-color-white">The Story of Binance</h3> -->
+                    <!-- <h3 class="heading-style-h2 text-color-white">The Binance Story</h3> -->
                     <div class="spacer-xsmall"></div>
                     
                     
